--- a/_posts/2019-12-19-the-us-narrative-today.html
+++ b/_posts/2019-12-19-the-us-narrative-today.html
@@ -1799,107 +1799,107 @@ stories:
   domain: http://www.wausharaargus.com/
   link: https://www.wausharaargus.com/latest-fundraisers/wautoma-area-school-district-donates-over-4000-food-items-christmas-project
 images:
-- name: crow_alberto_giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_alberto_giacometti.jpg
-- name: containership-containership-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-alberto-giacometti.jpg
-- name: blossombar-clean-view-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-clean-view-file-00-00-24-99.jpg
-- name: la-muse-berline-wall-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-berline-wall-old-building.jpg
-- name: crow_dark_dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_dali.jpg
-- name: blossombar-crafty-painting-file-00-00-50-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-38.jpg
-- name: stories-supreme-court-statues.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-supreme-court-statues.jpg
-- name: old-school-house-old-schoolhouse-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-constitution.jpg
-- name: aws-s3-stories-vancouver-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-diego-rivera1.jpg
-- name: braceros-domingo-ulloa-white-house-lawn-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-white-house-lawn-view.jpg
-- name: christianity-christianity-under-construction-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-nazi-poster.jpg
-- name: aws-s3-smithriver-smithriver-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still.jpg
-- name: death-valley-death-valley-national-park-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-rainbow-festival.jpg
-- name: san-francisco-street-view-san-francisco-street-view-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-sunday.jpg
-- name: lincoln-memorial-lincolnmemorial-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-crunch-paper.jpg
-- name: stalin-time-old-house_36681740046_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-house_36681740046_o.jpg
-- name: walled-garden-walled-garden-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-colored-circuits.jpg
-- name: oldhotel-oldhotel-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-nazi-poster.jpg
-- name: bf-skinner-old-remington-typewriter.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-remington-typewriter.jpg
-- name: liberty-back-statue-liberty-back-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-hot-spicy.jpg
-- name: legal-statue-legalstatue-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-neo-instinct.jpg
-- name: supreme-court-supremecourt-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-wols.jpg
-- name: ellis-island-ellis-island-room-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-brush.jpg
-- name: copper-circuit-seattle-public-market_36725946605_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seattle-public-market_36725946605_o.jpg
-- name: christianity-christianity-under-construction-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-clean-view.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-colorful-blocks.jpg
-- name: razorwire-DSC-0080-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-ww2-dresden.jpg
-- name: bf-skinner-astoria-bridge-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-astoria-bridge-columbia.jpg
-- name: oldtrain-oldtrain-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-circuit.jpg
-- name: store-on-corner-oldcabin-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-gred-mash.jpg
-- name: machine-road-machine-road-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-alien-goggles.jpg
-- name: ellis-island-ellisisland-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-blocks.jpg
-- name: bluelake-cinnamon-rolls-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-cinnamon-rolls-file-00-01-17-38.jpg
-- name: berlinwall2-berlinwall-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-plentiful.jpg
-- name: stalin-time-train-tracks-bending.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-tracks-bending.jpg
-- name: walled-garden-walled-garden-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-colorful-dream.jpg
-- name: oldhouse-oldhouse-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-horiz-circuit.jpg
-- name: razorwire-DSC-0080-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dali-three.jpg
-- name: crow-crow-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-matrix.jpg
-- name: san-francisco-street-view-san-francisco-street-view-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-copper-circuit.jpg
-- name: downtown-trucksilo-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-mucha-mult.jpg
-- name: copper-circuit-seatlle-shipping-mountain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seatlle-shipping-mountain.jpg
-- name: bluelake-green-zuma-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-00-00-00.jpg
-- name: abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
-- name: san-francisco-street-view-san-francisco-street-view-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-yellow-paper.jpg
-- name: sand-hand-sand-hand-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-clean-view.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-clean-view.jpg
-- name: old-door-lock-old-door-lock-2-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-cinnamon-rolls.jpg
-- name: nazi-invasion-chess-in-the-park-with-pigeons.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-chess-in-the-park-with-pigeons.jpg
-- name: nazi-invasion-skulls-catacomb-up-close.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-skulls-catacomb-up-close.jpg
-- name: statue-of-liberty-front-view-statueofliberty-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dark-dali.jpg
+- name: crow-crow-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-granite.jpg
+- name: lincoln-memorial-lincolnmemorial-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-emily-carr.jpg
+- name: old-gas-pumps-oldgaspumps-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-plentiful.jpg
+- name: blossombar-yellow-collage-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-50-62.jpg
+- name: eduardo-eduardo-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-gred-mash.jpg
+- name: berlinwall2-berlinwall-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-ww2-dresden.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purple-storm.jpg
+- name: dc-statue-dcstatue-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-purple-storm.jpg
+- name: file-00-00-21-82.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-21-82.jpg
+- name: blossombar-spagetti-accident-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-spagetti-accident-file-00-00-24-99.jpg
+- name: rockingchair-rockingchair-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-constitution.jpg
+- name: oldcabin-oldcabin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-kandinsky-bv.jpg
+- name: nyc-flag-nycflag-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-gred-mash.jpg
+- name: paris-paris-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-marcel-duchamp.jpg
+- name: subway-subway-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-colorful-dream.jpg
+- name: berlinwall2-berlinwall-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-kandinsky-bv.jpg
+- name: yosemite-yosemite-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-yellow-collage.jpg
+- name: store-on-corner-store-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-aqua.jpg
+- name: docks-docks-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-rainbow-festival.jpg
+- name: curtain-curtain-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-rainbow-festival.jpg
+- name: white-house-lawn-white-house-lawn-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-yellow-paper.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-plentiful.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-plentiful.JPG
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-graham-sutherland.jpg
+- name: art-museum-art-museum-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-yellow-collage.jpg
+- name: fence-mexico-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-colorful-dream.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-really-hot.jpg
+- name: la-muse-butterfly-purple-flower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-butterfly-purple-flower.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crafty-painting.jpg
+- name: ellis-island-ellis-island-room-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-colorful-blocks.jpg
+- name: old-gas-pumps-oldgaspumps-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-constitution.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-light-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-light-dali.JPG
+- name: supreme-court-supremecourt-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-ww2-color.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-gan-vogh.jpg
+- name: oldcabin-store-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-rainbow-festival.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
+- name: yuma-bank-yuma-bak-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-4.jpg
+- name: nazi-invasion-san-francisco-skyline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-san-francisco-skyline.jpg
+- name: stalin-time-white-house-lawn-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-white-house-lawn-view.jpg
+- name: aws-s3-stories-36349148770-1a9d2692b2-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-36349148770-1a9d2692b2-z.jpg
+- name: oldhousecars-house-old-cars-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-colorful-blocks.jpg
+- name: death-valley-death-valley-national-park-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-crunch-paper.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
+- name: rain-princess-old-building-green-awnings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-old-building-green-awnings.jpg
+- name: beach-clouds-lifeguard-beachclouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-clean-view.jpg
+- name: old-door-lock-old-door-lock-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crafty-painting.jpg
+- name: fence-fence-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-purple-storm.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
+- name: oldsmallboat-oldsmallboat-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-colorful-blocks.jpg
+- name: nazi-invasion-wwdc-2011---moscone---san-francisco_5809419816_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-wwdc-2011---moscone---san-francisco_5809419816_o.jpg
+- name: aws-s3-stories-flower-barbed-wire-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-flower-barbed-wire-nazi-poster.jpg
+- name: cargo-ship-cargo-ship-on-sea-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-constitution.jpg
 ---
 Midwest Vision Partners Announces Partnership With Cleveland Eye Clinic.&nbsp;Trespasser Arrested After Trying To Break Into Cara Delevingne's Home.&nbsp;Paris Hilton Stole 'that's Hot' Catchphrase From Sister Nicky.&nbsp;Junior High Horns Standing Tall.&nbsp;Holiday Luncheon Festive Performance.&nbsp;Washington Post Editor Marty Baron Says Critics Are Distorting 'Merry Impeachmas' Photo.&nbsp;Nevis School Truth In Taxation Hearing Is Monday.&nbsp;Judge Considers Hammond Ranches Grazing Permit.&nbsp;
